019_retirement/grade.txt
Grading at 09/07/2018:01:38:39.784571
For commit ID e7fd250438de80dec8b77b91d8c106fff217f7a2
Checking for 'void retirement(int startAge, double initial, retire_info_t working, retire_info_t retired)'
[32mfound 'void retirement(int startAge, double initial, retire_info_t working, retire_info_t retired)' in your source code 'retirement.c'[0m
[32mSuccessfully compiled ['retirement.c'].[0m
********************test case 1********************
Running original code
Exit status of your code: 0
[32mValgrind was clean[0m
[32mCorrect: your output matched the expected output.[0m
[32mpassed test case 1[0m
Replacing your main with ours to do more testing
retirement.c: In function ‘old_mainKouKpA’:
retirement.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors

[31mError: failed to compile your code[0m
[31mCannot continue testing[0m
Overall Grade: F
